<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#51829B"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text="@string/phone_store"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/nama_pembeli"
        app:hintTextColor="@color/design_default_color_on_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etnamapembeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_kode_barang"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/kode_barang"
        app:hintTextColor="@color/design_default_color_on_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etkodebarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_jumlah_barang"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/jumlah_barang"
        app:hintTextColor="@color/design_default_color_on_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etjumlahbarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:fontFamily="@font/alfa_slab_one" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbemas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/gold" />

            <RadioButton
                android:id="@+id/rbperak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/silver" />

            <RadioButton
                android:id="@+id/rbbiasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/reguler" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnproses"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="50dp"
        android:background="#51829B"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/proses"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>
