<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#51829B"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text="@string/have_a_good_day"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvselamatdatang"
        android:layout_width="253dp"
        android:layout_height="49dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:textSize="25sp"
        android:text="@string/total_belanja"
        app:layout_constraintEnd_toEndOf="@+id/tittle"
        app:layout_constraintStart_toStartOf="@+id/tittle"
        app:layout_constraintTop_toTopOf="@+id/tittle" />


    <TextView
        android:id="@+id/tvdesc"
        android:layout_width="336dp"
        android:layout_height="385dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/acme"
        android:gravity="clip_horizontal"
        android:scaleType="fitCenter"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/tvselamatdatang"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/tvselamatdatang"
        app:layout_constraintTop_toTopOf="@+id/tvselamatdatang" />

    <Button
        android:id="@+id/btnshare"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:background="#51829B"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/tvdesc"
        app:layout_constraintStart_toStartOf="@+id/tvdesc"
        app:layout_constraintTop_toBottomOf="@+id/tvdesc" />


</androidx.constraintlayout.widget.ConstraintLayout>